--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -17,7 +17,7 @@
       <form id="book-form">
         <div class="form-group">
           <label for="title">Title:</label>
-          <input type="text" id="title" name="title" class="form-control" />
+          <input type="text" id="title" name="title" class="form-control"  />
         </div>
 
         <div class="form-group">
@@ -51,6 +51,7 @@
       <select class="selectGenre" >
 
       </select>
+      div
 
       <h2>Books</h2>
       <ul id="book-list">
